dark mode fix

--- a/webapp/static/webapp/css/dark-mode.css
+++ b/webapp/static/webapp/css/dark-mode.css
@@ -55,3 +55,7 @@
   background-color: #292929!important;
   color: white !important;
 }
+
+[data-theme="dark"] .background_weather_sunny {
+  background-image: url("../img/night.jpg");
+}
